--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 composer.lock
+.idea/
+.DS_Store
+send_email.php
 HACKINK-EXTRA-POINT(you win +1 pts if you submit your workshop with this comment :-) )/
